Bug 374869 - Window geometry effect is not updated if resizing Wayland windows
Summary: Window geometry effect is not updated if resizing Wayland windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.8.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D4333
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-10 14:16 UTC by Igor Poboiko
Modified: 2017-01-30 16:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.1
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: X11-
mgraesslin: ReviewRequest+


Attachments
Screenshot (948.67 KB, image/png)
2017-01-10 14:16 UTC, Igor Poboiko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Poboiko 2017-01-10 14:16:21 UTC
Created attachment 103328 [details]
Screenshot

The summary says it all.
If I resize a Qt5 application (tried: Dolphin, SystemSettings), the "Window Geometry" effect is not updated (see screenshot attached).
However, it gets updated when resizing Qt4 applications (tried: Skype; man, it's hard to find a Qt4 application nowadays :S) and GTK applications (tried: Inkscape, GIMP, LibreOffice).
Comment 1 Igor Poboiko 2017-01-10 14:17:40 UTC
While investigating that, I also noted three another issues related to resizing.
1) Cursor is wrong if I'm resizing the window by dragging the lower-right corner (it's two arrows pointing to top-right and lower-left, while should be pointing to top-left and lower-right).
2) If I try to resize Skype right after launching it, it only resizes by several pixels (~10px) and then stops. After dancing around (moving the window, alt+tabbing, several attempts of resizing), at some point it starts working. Of all applications I've tested (both GTK and Qt), Skype seems to be only one affected.
3) KWin Debug Console doesn't want to resize when using "Alt+Right mouse button drag".

I can fill it as separate bugs (if these issues are not yet known)
Comment 2 Martin Flöser 2017-01-10 15:54:16 UTC
can you try: qtapp --platform xcb

I assume it's a problem only for Wayland window. Qt 4 and gtk are probably X windows.

For the other issues: yes, please report new bugs, otherwise it's difficult to track. 1 is reported. The others are unknown to me
Comment 3 Igor Poboiko 2017-01-10 18:43:01 UTC
Running "dolphin --platform xcb" shows the geometry correctly.

---
Funny thing. "dolphin" being started from Yakuake uses "xcb" platform by default; while if I start it from Konsole or KRunner, it uses Wayland.
Comment 4 Martin Flöser 2017-01-10 18:50:15 UTC
Am 2017-01-10 19:43, schrieb Igor Poboiko:
> COMMENT # 3 [1] ON BUG 374869 [2] FROM IGOR POBOIKO
> 
> Running "dolphin --platform xcb" shows the geometry correctly.

good, that validates my theory.

> 
> ---
> Funny thing. "dolphin" being started from Yakuake uses "xcb" platform
> by
> default; while if I start it from Konsole or KRunner, it uses Wayland.

Most likely your yakuake is an older version which still forces xcb and
thus it gets inherited to all started apps. Konsole, though, doesn't 
force
a platform, thus it doesn't change.
Comment 5 Martin Flöser 2017-01-29 13:04:27 UTC
commit a67f4dfa65ee2c7e6327dd1474fdc3b526e943b2
Author: Martin Gräßlin <mgraesslin@kde.org>
Date:   Sun Jan 29 14:01:15 2017 +0100

    [autotests] Add test case for resizing window manually
    
    During resize the signal clientStepUserMovedResized signal is not emitted
    for Wayland windows which causes the window geometry effect to not
    function. This change adds a test case highlighting the problem.
Comment 6 Martin Flöser 2017-01-30 16:03:07 UTC
Git commit 5083adb1b85a7194bd84d170225596ca507b8858 by Martin Gräßlin.
Committed on 30/01/2017 at 16:02.
Pushed by graesslin into branch 'Plasma/5.9'.

Call performMoveResize when we got a new geoemtry during resize

Summary:
So far on a geometry sync we did not call performMoveResize like we
do on X11 when getting the sync. This resulted in the
clientStepUserMovedResized not getting called during resize and the
geometry update effect to not function.
FIXED-IN: 5.9.1

Test Plan: Geometry hint updates

Reviewers: #kwin, #plasma_on_wayland

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D4333

M  +0    -2    autotests/integration/move_resize_window_test.cpp
M  +4    -0    shell_client.cpp

https://commits.kde.org/kwin/5083adb1b85a7194bd84d170225596ca507b8858